# iris

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  backlog.md  checklist.md  deny.toml
.config/: nextest.toml
.github/workflows/: ci.yml
docs/adr/: 0001-domain-neutral-visualization-contract.md  0002-consumer-color-law-consolidation.md  INDEX.md
examples/: colormap_lut.rs
src/: error.rs  lib.rs
src/color/: lookup_table.rs  mod.rs  model.rs  normalized.rs
src/color/map/: diverging.rs  interpolation.rs  mod.rs  named.rs  sequential.rs  table.rs
src/render/: backend.rs  mod.rs
src/view/: axis.rs  mod.rs  scalar_field.rs  series.rs
tests/: color_laws.rs  view_contracts.rs
