[package]
name = "iris"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "Domain-neutral scientific visualization contracts for Atlas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/iris"
readme = "README.md"
keywords = ["visualization", "scientific", "colormap", "rendering"]
categories = ["graphics", "science", "no-std"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev]
debug = "line-tables-only"
overflow-checks = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
overflow-checks = true

[profile.release]
debug = false
strip = "symbols"
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
